hero alignment fixes

--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -22,15 +22,25 @@
     /* background-image: url('/public/images/bg.jpg'); */
 
 }
-
+.hero-gradient{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .hero-container img {
     position: relative;
     width: 500px;
     height: 500px;
     z-index: 1;
     padding: 10px 20px;
+    transition: 0.45s ease-in-out;
 }
 
+.hero-container img:hover {
+    transform: scale(1.05);
+    transition: 0.45s ease-in-out;
+}
 
 
 .hero-text {
@@ -66,13 +76,13 @@
 }
 
 .hero-text span {
-    background: linear-gradient(to right bottom,#010a1b, #35199b, #010a1b);
+    background: linear-gradient(to right bottom, #010a1b, #35199b, #010a1b);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
 
 .hero-text span1 {
-    background: linear-gradient(to right bottom, #ffd519, #FEEFAD,#ffd519);
+    background: linear-gradient(to right bottom, #ffd519, #FEEFAD, #ffd519);
     /* background: linear-gradient(to right bottom, #2c128a, #010a1b); */
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -94,7 +104,7 @@
     /* width: 200px; */
     /* background: rgb(255, 202, 87); */
     padding: 10px 18px;
-    background: linear-gradient(to right bottom,#010a1b, #271274, #010a1b);
+    background: linear-gradient(to right bottom, #010a1b, #271274, #010a1b);
     border: none;
     color: #fff;
     font-size: 1.4em;
@@ -110,7 +120,7 @@
 }
 
 .hero-free-trial-button button:hover {
-    background: linear-gradient(to right bottom,#010a1b, #2c128a, #010a1b);
+    background: linear-gradient(to right bottom, #010a1b, #2c128a, #010a1b);
     color: #fff;
     box-shadow: 2px 3px 30px #8376f3,
         -1px -2px 20px #ac76f3;
@@ -124,16 +134,17 @@
     }
 
     .hero-container {
-        justify-content: flex-end;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
         width: 100%;
-        height: 90vh;
+        /* height: 90vh; */
     }
 
 
     .hero-text {
-        position: absolute;
-        bottom: 0;
+        position: relative;
         margin: 0;
         padding: 1em;
         /* padding-bottom: 1em; */
@@ -169,21 +180,17 @@
 
 @media(300px <=width <=600px) {
     .hero-container {
-        justify-content: flex-end;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
         width: 100%;
-        height: 90vh;
-    }
-
-    .hero-container::before {
-        height: 100vh;
-        bottom: 0;
-        clip-path: circle(75% at 50% 100%);
+        height: 100%;
+        /* height: 90vh; */
     }
 
     .hero-text {
-        position: absolute;
-        bottom: 0;
+        position: relative;
         margin: 0;
         padding: 2em;
         /* padding-bottom: 1em; */
@@ -199,6 +206,11 @@
 
     .hero-text>span1 {
         font-size: 2.3em;
+    }
+
+    .hero-container img {
+        width: 90%;
+        height: auto;
     }
 
     .hero-free-trial-button {
