--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     background: linear-gradient(90deg, rgb(20, 102, 255) 0%, rgb(17, 160, 226) 100%);
-    height: 80px;
+    height: 10vh;
+    min-height: 60px;
     display: flex;
     padding: 0 20px;
     justify-content: center;
@@ -16,7 +17,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    min-height: 60px;
+    
     width: 100%;
     max-width: 1500px;
   }
@@ -49,7 +51,8 @@
     list-style: none;
     text-align: center;
     width: 60vw;
-    height: 100%;
+    height: 10vh;
+    min-height: 60px;
     justify-content: end;
     /* margin-right: 2rem; */
   }
@@ -58,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 90%
+    height: 100%
   }
   
   .nav-links {
@@ -71,7 +74,7 @@
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 4px solid #ffe923;
     transition: all 0.2s ease-out;
   }
   
